Refactor ParallelStreamSample